--- a/home.html
+++ b/home.html
@@ -190,8 +190,7 @@
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
       <h3>Festive Feast</h3>
-      <p>Available 1st–23rd December across all our pubs.
-        Book before 31st October and save £5 per head!</p>
+      <p>Available 1st–23rd December across all our pubs.Book before 31st October and save £5 per head!</p>
       <a href="festive-feast.html" class="btn">View Details</a>
     </div>
 
@@ -199,8 +198,7 @@
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
       <h3>Sunday Roasts</h3>
-      <p>Every Sunday, enjoy a traditional roast, 
-        with all the trimmings at any Country Inns pub.</p>
+      <p>Every Sunday, enjoy a traditional roast, with all the trimmings at any Country Inns pub.</p>
       <a href="sunday-roast.html" class="btn">See More</a>
     </div>
 
@@ -208,8 +206,7 @@
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
       <h3>Dog Friendly</h3>
-      <p>All our pubs are dog-friendly,
-        bring your four-legged friends along!</p>
+      <p>All our pubs are dog-friendly,bring your four-legged friends along!</p>
       <a href="dog-friendly.html"
     </div>
 
@@ -217,16 +214,14 @@
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1586425221220-9ac4c8b8f7f1?auto=format&fit=crop&w=800&q=80" alt="Local Ales">
       <h3>Local Ales & Fine Wines</h3>
-      <p>Discover our carefully chosen local ales and wines,
-        available across all Country Inns pubs.</p>
+      <p>Discover our carefully chosen local ales and wines,available across all Country Inns pubs.</p>
     </div>
 
     <!-- Country Inns Experience -->
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?auto=format&fit=crop&w=800&q=80" alt="Cosy Pubs">
       <h3>Country Inns Experience</h3>
-      <p>Cosy pubs, crackling fires, hearty meals, 
-        and a warm welcome wherever you visit.</p>
+      <p>Cosy pubs, crackling fires, hearty meals, and a warm welcome wherever you visit.</p>
       <a href="country-inns-experience.html"
     </div>
 
